# Wikipedia-Source-Bias

./: .gitignore  AUTHORS.md  LICENSE  METHODOLOGY.md  Procfile  README.md  afd_geographic_output.json  country_coordinates_cache.json  crossref_cache.json  french_articles.txt  genderize_cache.json  jobs.yaml  macron_geographic_output.json  macron_geographic_output.txt  macron_output.json  macron_output_all.json  macron_results.txt  mbfc_cache.json  nametrace_cache.json  package-lock.json  package.json  page_cache.json  pyproject.toml  requirements-dev.txt  requirements.txt  sources_map.json  wikidata_author_cache.json  wikidata_enrichment_cache.json  wikidata_neighbors_cache.json  wikidata_population_cache.json  wikidata_publisher_cache.json
backend/: analyzer.py  app.py  cache.py  config.py  db_cachestore.py  invariants.py  mock.py  populate_cache.py  requirements.txt  runner.py  schema.py  status_i18n.py  worker.py
backend/templates/: audit.html  status.html
backend/tests/: test_analyzer.py  test_app.py  test_cache.py  test_cache_contract.py  test_config.py  test_geography.py  test_invariants.py  test_regions.py  test_runner.py  test_schema.py  test_urlnorm.py  test_worker_memory.py
french_articles_results/: adolf_hitler_analysis.json  adolf_hitler_map.json  changement_climatique_analysis.json  changement_climatique_map.json  charles_de_gaulle_analysis.json  charles_de_gaulle_map.json  christianisme_analysis.json  christianisme_map.json  donald_trump_analysis.json  donald_trump_map.json  emmanuel_macron_analysis.json  emmanuel_macron_map.json  françois_hollande_analysis.json  françois_hollande_map.json  guerre_israël-hamas_analysis.json  guerre_israël-hamas_map.json  guerre_russo-ukrainienne_analysis.json  guerre_russo-ukrainienne_map.json  islam_analysis.json  islam_map.json  jacques_chirac_analysis.json  jacques_chirac_map.json  jean-luc_mélenchon_analysis.json  jean-luc_mélenchon_map.json  joe_biden_analysis.json  joe_biden_map.json  judaïsme_analysis.json  judaïsme_map.json  laïcité_en_france_analysis.json  laïcité_en_france_map.json  marine_le_pen_analysis.json  marine_le_pen_map.json  napoléon_bonaparte_analysis.json  napoléon_bonaparte_map.json  nicolas_sarkozy_analysis.json  nicolas_sarkozy_map.json  russie_analysis.json  russie_map.json  ukraine_analysis.json  ukraine_map.json  (+4 more)
frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/assets/: main.css
frontend/components/: AppHeader.vue  ArticleInput.vue  ArticleView.vue  CorpusExamples.vue  CtaPanel.vue  DashboardLayout.vue  EmptyState.vue  ErrorState.vue  ImbalanceNotice.vue  (+9 more)
tests/: test_analysis.py  test_authors.py  test_batch.py  test_bounded_fetch.py  test_concurrency_progress.py  test_dedup.py  test_map.py  test_marianne.py  test_no_authored_bias_ratings.py  test_no_fabrication.py  test_ratelimit.py  test_render_report.py  test_unmapped_coverage.py  test_wikidata_mbfc.py
toolforge/: README.md  migrate_001_split_result.sql  schema.sql  service.template
wikidata_mbfc/: README.md  __init__.py  cli.py  corpus.py  domains.py  emit.py  mbfc.py  wikidata.py
wikipedia_sources_bias/: __init__.py  analysis.py  cachestore.py  cli.py  heuristics_data.py  map_sources.py  provenance.py  ratelimit.py  urlnorm.py
(+44 files in other folders)
